--- a/README
+++ b/README
@@ -52,7 +52,7 @@ from implementing your own buffering mechanisms - which is good.
 
 Copyright & License
 -------------------
-Notify, is Copyright (c) 2009-2012 David Persson if not otherwise
+Notify, is Copyright (c) 2012 David Persson if not otherwise
 stated. The code is distributed under the terms of the MIT License.
 For the full license text see the LICENSE file.
 
