Works fine with 1.8.3.

--- a/README
+++ b/README
@@ -58,4 +58,4 @@ For the full license text see the LICENSE file.
 
 Requirements
 ------------
-The plugin is known to work well in combination with jQuery 1.5.2 and 1.8.1.
+The plugin is known to work well in combination with jQuery 1.5.2, 1.8.1 and 1.8.3.
