Adding statement about versioning model.

--- a/README
+++ b/README
@@ -59,6 +59,17 @@ Notify, is Copyright (c) 2012, 2013 David Persson if not otherwise
 stated. The code is distributed under the terms of the MIT License.
 For the full license text see the LICENSE file.
 
-Requirements
-------------
+Versions & Requirements
+-----------------------
+Notify follows the rolling release development model. Code in the master
+branch should always considered to be stable. While code in the dev branch
+should be considered unstable or sometimes even expiremental.
+
+There are no versions as in the standard release development model but
+snapshots. The master branch may be tagged ("snapshotted") at any point in
+time when a significant point of development has been reached.
+
+Snapshots are schemed as follows:
+[current year, two digit].[index, zero based]
+
 The plugin is known to work well in combination with jQuery 1.5.2, 1.8.1 and 1.8.3.
