--- a/README
+++ b/README
@@ -72,4 +72,4 @@ time when a significant point of development has been reached.
 Snapshots are schemed as follows:
 [current year, two digit].[index, zero based]
 
-The plugin is known to work well in combination with jQuery 1.5.2, 1.8.1 and 1.8.3.
+Requires jquery >= 1.8.1.
