--- a/README
+++ b/README
@@ -71,7 +71,7 @@ good.
 
 Copyright & License
 -------------------
-Notify, is Copyright (c) 2012, 2013 David Persson if not otherwise
+Notify, is Copyright (c) 2012-2014 David Persson if not otherwise
 stated. The code is distributed under the terms of the MIT License.
 For the full license text see the LICENSE file.
 
